# ttrpc-rust

./: Cargo.toml  Makefile
.github/workflows/: bvt.yml
example/: Cargo.toml  Makefile  build.rs  client.rs  server.rs  utils.rs
example/protocols/: mod.rs
example/protocols/asynchronous/: mod.rs
src/: common.rs  error.rs  lib.rs  macros.rs  net.rs
src/sync/: channel.rs  client.rs  mod.rs  server.rs  utils.rs
src/sync/sys/: mod.rs
src/sync/sys/linux/: mod.rs  net.rs
src/sync/sys/unix/: net.rs
src/sync/sys/windows/: net.rs
tests/: sync-test.rs
